# -*- mode:CMake -*-
#==============================================================================#
# File:     CMakeLists.txt
# Author:   Tom Verloop   <T93.Verloop@gmail.com>
# Version:  0.1
# Date:     08-06-2018
#
# Operating System Abstraction Layer.
#
#==============================================================================#

#==============================================================================#
# Operating System Abstraction Layer
#==============================================================================#

#------------------------------------------------------------------------------#
# Library definition.
#------------------------------------------------------------------------------#

add_library(osal INTERFACE)

#------------------------------------------------------------------------------#
# Source files.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Include directories.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Compiler options.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Linker options.
#------------------------------------------------------------------------------#

#==============================================================================#
# EOF.
#==============================================================================#
