# -*- mode:CMake -*-
#==============================================================================#
# File:     CMakeLists.txt
# Author:   Tom Verloop   <T93.Verloop@gmail.com>
# Version:  0.1
# Date:     08-06-2018
#
# ARM architecture specific libraries.
#
#==============================================================================#

#==============================================================================#
# ARM.
#==============================================================================#

#------------------------------------------------------------------------------#
# Library definition.
#------------------------------------------------------------------------------#

add_library(__ARM INTERFACE)        # Define ARM library.
add_library(hal::arm ALIAS __ARM)   # Alias it into HAL namespace.

#------------------------------------------------------------------------------#
# Source files.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Include directories.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Linked libraries.
#------------------------------------------------------------------------------#

target_link_libraries(__ARM
  INTERFACE
    hal::hal                        # Link to HAL library.
)

#------------------------------------------------------------------------------#
# Compiler definitions.
#------------------------------------------------------------------------------#

target_compile_definitions(__ARM
  INTERFACE
    ARM=1
)

#------------------------------------------------------------------------------#
# Compiler options.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Linker options.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Sub-directories.
#------------------------------------------------------------------------------#

add_subdirectory(processor)         # Processor specific libraries.
add_subdirectory(st)                # Vendor specific libraries.

#==============================================================================#
# EOF.
#==============================================================================#
