# -*- mode:CMake -*-
#==============================================================================#
# File:     CMakeLists.txt
# Author:   Tom Verloop   <T93.Verloop@gmail.com>
# Version:  0.1
# Date:     08-06-2018
#
# Processor specific libraries.
#
#==============================================================================#

add_subdirectory(cortex_m3) # Cortex-M3 specific libraries.

#==============================================================================#
# EOF.
#==============================================================================#
