# -*- mode:CMake -*-
#==============================================================================#
# File:     CMakeLists.txt
# Author:   Tom Verloop   <T93.Verloop@gmail.com>
# Version:  0.1
# Date:     08-06-2018
#
# ST Vendor specific libraries.
#
#==============================================================================#

#==============================================================================#
# ST
#==============================================================================#

#------------------------------------------------------------------------------#
# Library definition.
#------------------------------------------------------------------------------#

add_library(__ST INTERFACE)
add_library(hal::arm::st ALIAS __ST)

#------------------------------------------------------------------------------#
# Include directories.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Compiler options.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Linker options.
#------------------------------------------------------------------------------#

target_link_libraries(__ST
  INTERFACE
    hal::arm
)

#------------------------------------------------------------------------------#
# Sub-directories.
#------------------------------------------------------------------------------#

add_subdirectory(stm32f10xxx)

#==============================================================================#
# EOF.
#==============================================================================#
