# -*- mode:CMake -*-
#==============================================================================#
# File:     CMakeLists.txt
# Author:   Tom Verloop   <T93.Verloop@gmail.com>
# Version:  0.1
# Date:     08-06-2018
#
# STM32F10xxx family libraries.
#
#==============================================================================#

if(CORTEX_M3_AVAILABLE)

#==============================================================================#
# Properties.
#==============================================================================#

#------------------------------------------------------------------------------#
# Main stack size.
#------------------------------------------------------------------------------#

define_property(TARGET
    PROPERTY
        STM32F10xxx_EXT_CLK
    BRIEF_DOCS "Clock speed of external oscilator."
    FULL_DOCS  "Clock speed of external oscilator in Hertz."
)

#==============================================================================#
# STM32f10xxx
#==============================================================================#

#------------------------------------------------------------------------------#
# Library definitions.
#------------------------------------------------------------------------------#

  add_library(__STM32F10XXX INTERFACE)
  add_library(hal::arm::st::stm32f10xxx ALIAS __STM32F10XXX)

#------------------------------------------------------------------------------#
# Source files.
#------------------------------------------------------------------------------#

  target_sources(__STM32F10XXX
    INTERFACE
      ${CMAKE_CURRENT_SOURCE_DIR}/source/gpio.cpp
      ${CMAKE_CURRENT_SOURCE_DIR}/source/rcc.cpp
      ${CMAKE_CURRENT_SOURCE_DIR}/source/startup.cpp
      ${CMAKE_CURRENT_SOURCE_DIR}/source/interrupts.cpp
      ${CMAKE_CURRENT_SOURCE_DIR}/source/flash.cpp
  )

#------------------------------------------------------------------------------#
# Include directories.
#------------------------------------------------------------------------------#

  target_include_directories(__STM32F10XXX
    INTERFACE
      ${CMAKE_CURRENT_SOURCE_DIR}/include
  )

#------------------------------------------------------------------------------#
# Linked libraries.
#------------------------------------------------------------------------------#

  target_link_libraries(__STM32F10XXX
    INTERFACE
      hal::arm::st
      hal::arm::cortex_m3
  )

#------------------------------------------------------------------------------#
# Compiler definitions.
#------------------------------------------------------------------------------#

  target_compile_definitions(__STM32F10XXX
    INTERFACE
      STM32F10XXX=1
      EXTCLK=$<TARGET_PROPERTY:STM32F10xxx_EXT_CLK>
  )

#------------------------------------------------------------------------------#
# Compiler options.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Linker options.
#------------------------------------------------------------------------------#

#==============================================================================#
# STM32f103x8xx
#==============================================================================#

#------------------------------------------------------------------------------#
# Library definitions.
#------------------------------------------------------------------------------#

  add_library(__STM32F103X8XX INTERFACE)
  add_library(hal::arm::st::stm32f103x8xx ALIAS __STM32F103X8XX)

#------------------------------------------------------------------------------#
# Source files.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Include directories.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Linked libraries.
#------------------------------------------------------------------------------#

  target_link_libraries(__STM32F103X8XX
    INTERFACE
      hal::arm::st::stm32f10xxx
  )

#------------------------------------------------------------------------------#
# Compiler definitions.
#------------------------------------------------------------------------------#

  target_compile_definitions(__STM32F103X8XX
    INTERFACE
      PLATFORM=STM32F103x8xx
      STM32F103X8XX=1
  )

#------------------------------------------------------------------------------#
# Compiler options.
#------------------------------------------------------------------------------#

#------------------------------------------------------------------------------#
# Linker options.
#------------------------------------------------------------------------------#

target_link_libraries(__STM32F103X8XX
    INTERFACE
      -T${CMAKE_CURRENT_SOURCE_DIR}/link/stm32f103x8xx.ld
  )

#------------------------------------------------------------------------------#
# Compiler definitions.
#------------------------------------------------------------------------------#


endif() # CMAKE_SYSTEM_NAME STREQUAL Generic
